# FinArbitrage

./: README.md  pyproject.toml
notebooks/: dev.ipynb
